Add config file for test_gmres and allow for Eigen-MKL backend

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CTEST_BINARY_DIRECTORY ${PROJECT_BINARY_DIR}/tests)
 file(GLOB files "test_*.cpp")
 
 configure_file("np_fib.npz" "np_fib.npz" COPYONLY)
+configure_file("2K_MTs_onCortex_R5_L1.fibers" "2K_MTs_onCortex_R5_L1.fibers" COPYONLY)
 add_library(cnpy STATIC cnpy.cpp)
 
 foreach(file ${files})
