Fully integrate fiber-periphery system
Remove various hacks as well, such as FiberContainers only having the same number of fibers
across ranks. Now the system is distributed properly, regardless of input

GMRES converges very nicely, being probably ~8X faster than the python code on a similar
problem on the EPYC 128 core nodes.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ file(GLOB files "test_*.cpp")
 
 configure_file("np_fib.npz" "np_fib.npz" COPYONLY)
 configure_file("2K_MTs_onCortex_R5_L1.fibers" "2K_MTs_onCortex_R5_L1.fibers" COPYONLY)
+configure_file("2_MTs_onCortex_R5_L1.fibers" "2_MTs_onCortex_R5_L1.fibers" COPYONLY)
 
 foreach(file ${files})
 	string(REGEX REPLACE "(^.*/|\\.[^.]*$)" "" file_without_ext ${file})
