--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,8 +6,10 @@ file(GLOB files "test_*.cpp")
 configure_file("np_fib.npz" "np_fib.npz" COPYONLY)
 configure_file("2K_MTs_onCortex_R5_L1.toml" "2K_MTs_onCortex_R5_L1.toml" COPYONLY)
 configure_file("test_periphery.toml" "test_periphery.toml" COPYONLY)
+configure_file("test_body.toml" "test_body.toml" COPYONLY)
 
-add_test(NAME "make_shell_precompute_data" COMMAND "python3" "${CMAKE_SOURCE_DIR}/utils/make_shell_precompute_data.py" "test_periphery.toml")
+add_test(NAME "make_precompute_data_periphery" COMMAND "python3" "${CMAKE_SOURCE_DIR}/utils/make_precompute_data.py" "test_periphery.toml")
+add_test(NAME "make_precompute_data_body" COMMAND "python3" "${CMAKE_SOURCE_DIR}/utils/make_precompute_data.py" "test_body.toml")
 
 foreach(file ${files})
 	string(REGEX REPLACE "(^.*/|\\.[^.]*$)" "" file_without_ext ${file})
