--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,8 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
 elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
 elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
   # using intel, disable offloading
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -qno-offload")
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -qno-offload")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -qno-offload -wd1011")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -qno-offload -wd1011")
 elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 endif()
 
