Add nucleation site creation via input preprocessing

--- a/tests/test_body.toml
+++ b/tests/test_body.toml
@@ -3,7 +3,7 @@ eta = 10.0
 
 [[bodies]]
 nucleation_type = 'auto'
-num_nucleation_sites = 100
+n_nucleation_sites = 10
 position = [-1.0, 0.0, 0.0]
 shape = 'sphere'
 radius = 0.5
@@ -12,9 +12,35 @@ precompute_file = 'test_body.npz'
 
 [[bodies]]
 nucleation_type = 'auto'
-num_nucleation_sites = 100
+n_nucleation_sites = 10
 position = [1.0, 0.0, 0.0]
 shape = 'sphere'
 radius = 0.5
 num_nodes = 200
 precompute_file = 'test_body2.npz'
+
+
+[[fibers]]
+num_points = 8
+parent_body = 0
+relative_position = [0.0, 0.0, 1.0]
+orientation = [0.0, 0.0, 1.0]
+bending_rigidity = 10.0
+length = 1.0
+
+[[fibers]]
+num_points = 8
+parent_body = 1
+relative_position = [1.0, 0.0, 1.0]
+orientation = [0.0, 0.0, 1.0]
+bending_rigidity = 10.0
+length = 1.0
+
+[[fibers]]
+num_points = 8
+parent_body = 1
+parent_site = 5
+relative_position = [2.0, 0.0, 1.0]
+orientation = [0.0, 0.0, 1.0]
+bending_rigidity = 10.0
+length = 1.0
