--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,17 +14,26 @@ add_test(NAME "make_precompute_data_body" COMMAND "python3" "${CMAKE_SOURCE_DIR}
 add_test(NAME "make_precompute_data_gmres" COMMAND "python3" "${CMAKE_SOURCE_DIR}/utils/make_precompute_data.py" "test_gmres.toml")
 
 foreach(file ${files})
-	string(REGEX REPLACE "(^.*/|\\.[^.]*$)" "" file_without_ext ${file})
-	add_executable(${file_without_ext} ${file})
-	target_link_libraries(${file_without_ext} skelly z OpenMP::OpenMP_CXX MPI::MPI_CXX
-      ${Kokkos_LIBRARIES} ${Tpetra_LIBRARIES} ${Teuchos_LIBRARIES} ${Belos_LIBRARIES})
-    target_include_directories(${file_without_ext} PRIVATE ${PROJECT_SOURCE_DIR}/include ${PVFMM_INCLUDE_DIR}/pvfmm ${PVFMM_DEP_INCLUDE_DIR})
-	add_test(${file_without_ext} ${file_without_ext})
-	set_tests_properties(${file_without_ext}
-		PROPERTIES
-		PASS_REGULAR_EXPRESSION "Test passed"
-        FAIL_REGULAR_EXPRESSION "(Exception|Test failed)"
-        TIMEOUT 120
-        )
+  string(REGEX REPLACE "(^.*/|\\.[^.]*$)" "" file_without_ext ${file})
+  add_executable(${file_without_ext} ${file})
+
+  target_link_libraries(${file_without_ext} skelly z OpenMP::OpenMP_CXX MPI::MPI_CXX
+    ${Kokkos_LIBRARIES} ${Tpetra_LIBRARIES} ${Teuchos_LIBRARIES} ${Belos_LIBRARIES})
+  
+  target_include_directories(${file_without_ext} PRIVATE
+    ${PROJECT_SOURCE_DIR}/include
+    ${PROJECT_SOURCE_DIR}/extern/spdlog/include
+    ${PVFMM_INCLUDE_DIR}/pvfmm
+    ${PVFMM_DEP_INCLUDE_DIR}
+    )
+
+  add_test(${file_without_ext} ${file_without_ext})
+
+  set_tests_properties(${file_without_ext}
+    PROPERTIES
+    PASS_REGULAR_EXPRESSION "Test passed"
+    FAIL_REGULAR_EXPRESSION "(Exception|Test failed)"
+    TIMEOUT 120
+    )
 
 endforeach()
