Switch out TOML library to toml11

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "extern/trng4"]
 	path = extern/trng4
 	url = https://github.com/blackwer/trng4
+[submodule "extern/toml11"]
+	path = extern/toml11
+	url = https://github.com/ToruNiina/toml11
