--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ foreach(file ${files})
     ${PROJECT_SOURCE_DIR}/include
     ${PROJECT_SOURCE_DIR}/extern/spdlog/include
     ${PROJECT_SOURCE_DIR}/extern/toml11
+    ${PROJECT_SOURCE_DIR}/extern/msgpack-c/include
     ${PVFMM_INCLUDE_DIR}/pvfmm
     ${PVFMM_DEP_INCLUDE_DIR}
     )
