--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "extern/msgpack-c"]
 	path = extern/msgpack-c
 	url = https://github.com/msgpack/msgpack-c
+[submodule "utils/lib/function_generator"]
+	path = utils/lib/function_generator
+	url = https://github.com/blackwer/function_generator
