Get successful build going with PVFMM/STKFMM subprojects

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "utils/lib/function_generator"]
 	path = utils/lib/function_generator
 	url = https://github.com/blackwer/function_generator
+[submodule "extern/pvfmm"]
+	path = extern/pvfmm
+	url = https://github.com/dmalhotra/pvfmm.git
+[submodule "extern/stkfmm"]
+	path = extern/stkfmm
+	url = https://github.com/flatironinstitute/stkfmm.git
