--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,7 @@ add_library(skelly OBJECT
   src/fiber.cpp src/kernels.cpp src/utils.cpp src/periphery.cpp src/cnpy.cpp src/params.cpp
   src/dynamic_instability.cpp src/system.cpp src/body.cpp src/solver_hydro.cpp src/rng.cpp
   src/spherical_body.cpp src/deformable_body.cpp src/point_source.cpp src/streamline.cpp
-  src/kernels.cu
+  src/listener.cpp src/trajectory_reader.cpp src/kernels.cu
 )
 
 target_include_directories(skelly PUBLIC ${SKELLY_INCLUDES} SYSTEM ${SKELLY_INCLUDES_SYSTEM})
