--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -14,6 +14,7 @@ pipeline {
         }
       }
       environment {
+         HOME = "${env.WORKSPACE}/build"
          LC_ALL = "C"
          PATH = "/usr/local/bin:${env.PATH}"
          MKL_THREADING_LAYER = "GNU"
