--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
       environment {
          HOME = "${env.WORKSPACE}/build"
          LC_ALL = "C"
-         PATH = "/usr/local/bin:${env.PATH}"
+         PATH = "/usr/local/bin:${env.HOME}/.local/bin:${env.PATH}"
          MKL_THREADING_LAYER = "GNU"
          pvfmm_DIR = "${env.HOME}/.cache/pvfmm"
          LD_LIBRARY_PATH = "/opt/intel/oneapi/mkl/latest/lib/intel64:/usr/local/lib:${env.LD_LIBRARY_PATH}"
