--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -16,10 +16,10 @@ pipeline {
             environment {
                 HOME = "${env.WORKSPACE}/build"
                 LC_ALL = "C"
-                PATH = "/usr/local/bin:${env.HOME}/.local/bin:${env.PATH}"
+                PATH = "/usr/local/bin:${env.WORKSPACE}/build/.local/bin:${env.PATH}"
                 MKL_THREADING_LAYER = "GNU"
                 pvfmm_DIR = "${env.HOME}/.cache/pvfmm"
-                LD_LIBRARY_PATH = "/opt/intel/oneapi/mkl/latest/lib/intel64:/usr/local/lib:${env.LD_LIBRARY_PATH}"
+                LD_LIBRARY_PATH = "/opt/intel/oneapi/mkl/latest/lib/intel64:/usr/local/lib"
             }
             steps {
                 sh 'printenv | egrep "(^HOME|^PATH|^LD_LIBRARY_PATH|^pvfmm_DIR|^MKL_THREADING_LAYER|^LC_ALL)"'
