ci: attempt to add pvfmm/stkfmm/trilinos to docker image

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -10,47 +10,41 @@ RUN apt -y update && \
     apt-add-repository multiverse && \
     apt-add-repository universe && \
     apt -y update && \
-    apt -y install intel-oneapi-mkl-devel build-essential libopenmpi-dev cmake libeigen3-dev ninja-build git python3-pip
+    apt -y install intel-oneapi-mkl-devel build-essential libopenmpi-dev cmake libeigen3-dev ninja-build git python3-pip && \
+    apt -y autoclean
 
-# COPY skelly_sim/requirements.txt /tmp/
+RUN mkdir build && pushd build
 
-# RUN pip3 install --upgrade --upgrade-strategy eager -r /tmp/requirements.txt
+RUN curl -L -o pvfmm.tar.gz https://github.com/dmalhotra/pvfmm/archive/refs/tags/v1.3.0.tar.gz && \
+    tar -xf pvfmm.tar.gz && \
+    mkdir pvfmm-build && \
+    pushd pvfmm-build && \
+    cmake ../pvfmm-1.3.0 -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_CXX_FLAGS="$CXXFLAGS_" -GNinja && \
+    ninja && \
+    ninja install && \
+    popd
 
-    # mkdir build
-    # cd build
+RUN curl -L -o stkfmm.tar.gz https://github.com/wenyan4work/STKFMM/archive/refs/tags/v1.1.0.tar.gz && \
+    tar -xf stkfmm.tar.gz && \
+    mkdir stkfmm-build && \
+    pushd stkfmm-build && \
+    pvfmm_DIR=/usr/local/share/pvfmm cmake ../STKFMM-1.0.0 -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local \
+         -DCMAKE_CXX_FLAGS="$CXXFLAGS_" -GNinja && \
+    ninja && \
+    ninja install && \
+    popd
 
-    # curl -L -o pvfmm.tar.gz https://github.com/dmalhotra/pvfmm/archive/refs/tags/v1.2.1.tar.gz
-    # tar -xf pvfmm.tar.gz
-    # mkdir pvfmm-build
+RUN curl -L -o trilinos.tar.gz https://github.com/trilinos/Trilinos/archive/refs/tags/trilinos-release-13-2-0.tar.gz && \
+    tar -xf trilinos.tar.gz && \
+    mkdir trilinos-build && \
+    pushd trilinos-build && \
+    cmake ../Trilinos-trilinos-release-13-2-0 -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local -DTrilinos_VERBOSE_CONFIGURE:BOOL=OFF -DBUILD_SHARED_LIBS:BOOL=ON -DCMAKE_CXX_STANDARD:STRING=14 -DTrilinos_ENABLE_ALL_OPTIONAL_PACKAGES:BOOL=OFF -DTrilinos_ENABLE_ALL_PACKAGES:BOOL=OFF -DTrilinos_ENABLE_OpenMP=ON -DTrilinos_ENABLE_Kokkos:BOOL=ON -DTrilinos_ENABLE_Belos:BOOL=ON -DTrilinos_ENABLE_Tpetra:BOOL=ON -DTrilinos_ENABLE_Teuchos:BOOL=ON -DBUILD_TESTING:BOOL=OFF -DTrilinos_ENABLE_Fortran:BOOL=OFF -D TPL_ENABLE_MPI=ON -DTPL_BLAS_LIBRARIES=/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_rt.so -DTPL_LAPACK_LIBRARIES=/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_rt.so -DCMAKE_CXX_FLAGS="$CXXFLAGS_" -GNinja && \
+    ninja && \
+    ninja install && \
+    popd
 
-    # cd pvfmm-build
-    # cmake ../pvfmm-1.2.1 -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_BUILD_TYPE=Release \
-    # -DCMAKE_CXX_FLAGS="$CXXFLAGS_" -GNinja
-    # ninja
-    # ninja install
-    # cd ..
-
-    # curl -L -o stkfmm.tar.gz https://github.com/wenyan4work/STKFMM/archive/refs/tags/v1.0.0.tar.gz
-    # tar -xf stkfmm.tar.gz
-    # mkdir stkfmm-build
-
-    # cd stkfmm-build
-    # pvfmm_DIR=/usr/local/share/pvfmm cmake ../STKFMM-1.0.0 -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local \
-    # -DCMAKE_CXX_FLAGS="$CXXFLAGS_" -GNinja
-    # ninja
-    # ninja install
-    # cd ..
-
-    # curl -L -o trilinos.tar.gz https://github.com/trilinos/Trilinos/archive/refs/tags/trilinos-release-13-2-0.tar.gz
-    # tar -xf trilinos.tar.gz
-    # mkdir trilinos-build
-
-    # cd trilinos-build
-    # cmake ../Trilinos-trilinos-release-13-2-0 -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local -DTrilinos_VERBOSE_CONFIGURE:BOOL=OFF -DBUILD_SHARED_LIBS:BOOL=ON -DCMAKE_CXX_STANDARD:STRING=14 -DTrilinos_ENABLE_ALL_OPTIONAL_PACKAGES:BOOL=OFF -DTrilinos_ENABLE_ALL_PACKAGES:BOOL=OFF -DTrilinos_ENABLE_OpenMP=ON -DTrilinos_ENABLE_Kokkos:BOOL=ON -DTrilinos_ENABLE_Belos:BOOL=ON -DTrilinos_ENABLE_Tpetra:BOOL=ON -DTrilinos_ENABLE_Teuchos:BOOL=ON -DBUILD_TESTING:BOOL=OFF -DTrilinos_ENABLE_Fortran:BOOL=OFF -D TPL_ENABLE_MPI=ON -DTPL_BLAS_LIBRARIES=/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_rt.so -DTPL_LAPACK_LIBRARIES=/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_rt.so -DCMAKE_CXX_FLAGS="$CXXFLAGS_" -GNinja
-    # ninja
-    # ninja install
-    # cd ..
-
+RUN popd && rm -rf build
     # git clone https://github.com/flatironinstitute/skellysim
     # cd skellysim
     # git checkout ${SKELLY_VERS}
