--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
                 LD_LIBRARY_PATH = "/opt/intel/oneapi/mkl/latest/lib/intel64:/usr/local/lib"
             }
             steps {
-                sh 'printenv | egrep "(^HOME|^PATH|^LD_LIBRARY_PATH|^pvfmm_DIR|^MKL_THREADING_LAYER|^LC_ALL)"'
+                sh 'printenv | egrep "(^HOME|&STKFMM_ROOT|^MKLROOT|^LD_LIBRARY_PATH|^pvfmm_DIR|^MKL_THREADING_LAYER|^LC_ALL|^CXX_FLAGS_)"'
                 sh 'python3 -m pip install --user .'
             }
         }
