--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -21,20 +21,20 @@ RUN cd build && \
     git clone https://github.com/dmalhotra/pvfmm && \
     cd pvfmm && \
     git checkout v1.3.0 && \
-    git submodule update --recursive && \
+    git submodule update --init && \
     mkdir build && \
     cd build && \
-    cmake ../pvfmm-1.3.0 -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_BUILD_TYPE=Release \
+    cmake .. -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_BUILD_TYPE=Release \
         -DCMAKE_CXX_FLAGS="$CXXFLAGS_" -GNinja && \
     ninja && \
     ninja install
 
 RUN cd build && \
-    curl -L -o stkfmm.tar.gz https://github.com/wenyan4work/STKFMM/archive/refs/tags/v1.1.0.tar.gz && \
-    tar -xf stkfmm.tar.gz && \
-    mkdir stkfmm-build && \
-    pushd stkfmm-build && \
-    pvfmm_DIR=/usr/local/share/pvfmm cmake ../STKFMM-1.0.0 -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local \
+    git clone https://github.com/wenyan4work/STKFMM && \
+    cd STKFMM && \
+    mkdir build && \
+    cd build && \
+    pvfmm_DIR=/usr/local/share/pvfmm cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local \
         -DCMAKE_CXX_FLAGS="$CXXFLAGS_" -GNinja && \
     ninja && \
     ninja install
@@ -42,9 +42,10 @@ RUN cd build && \
 RUN cd build && \
     curl -L -o trilinos.tar.gz https://github.com/trilinos/Trilinos/archive/refs/tags/trilinos-release-13-2-0.tar.gz && \
     tar -xf trilinos.tar.gz && \
-    mkdir trilinos-build && \
-    pushd trilinos-build && \
-    cmake ../Trilinos-trilinos-release-13-2-0 -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local \
+    cd Trilinos-trilinos-release-13-2-0 && \
+    mkdir build && \
+    cd build && \
+    cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local \
         -DTrilinos_VERBOSE_CONFIGURE:BOOL=OFF -DBUILD_SHARED_LIBS:BOOL=ON -DCMAKE_CXX_STANDARD:STRING=14 \
         -DTrilinos_ENABLE_ALL_OPTIONAL_PACKAGES:BOOL=OFF -DTrilinos_ENABLE_ALL_PACKAGES:BOOL=OFF \
         -DTrilinos_ENABLE_OpenMP=ON -DTrilinos_ENABLE_Kokkos:BOOL=ON -DTrilinos_ENABLE_Belos:BOOL=ON \
