--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
                 sh 'cmake -B build . -DCMAKE_BUILD_TYPE=Release \
                     -DCMAKE_CXX_FLAGS="$CXXFLAGS_" -DBLAS_LIBRARIES=$MKLROOT/lib/intel64/libmkl_rt.so \
                     -DLAPACK_LIBRARIES=$MKLROOT/lib/intel64/libmkl_rt.so -GNinja'
-                sh 'ninja -C build build'
+                sh 'ninja -C build'
             }
         }
     }
