--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,8 @@ homepage = "https//github.com/flatironinstitute/skelly_sim"
 documentation = "https://users.flatironinstitute.org/~rblackwell/py-skellysim"
 developer-documentation = "https://users.flatirninstitute.org/~rblackwell/skellysim"
 
-[project.console_scripts]
-skelly-precompute = "scripts/skelly_precompute"
+[project.scripts]
+skelly_precompute = "skelly_sim.precompute:main"
 
 [build-system]
 requires = ["flit_core >=3.2,<4"]
